2014-10-07  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c, x_picture.c: The previous fix is moved from x_picture.c
	  to x_screen.c.

2014-10-07  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c: Inline pictures in back logs (except recent 1024 lines)
	  are removed.

2014-10-05  Araki Ken  <arakiken@users.sf.net>

	* ml_edit.c: Corrupt scrolling in Left-right margin which contains
	  full width characters is fixed.

2014-10-04  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: event->state & ModMask => compare_key_state_with_modmap().

2014-10-02  Araki Ken  <arakiken@users.sf.net>

	* display.h, android/jni/x.h, fb/x.h, win32/x.h, win32/x_display.c,
	  xlib/x_display.c, x_scrollbar.c:
	  XC_sb_v_double_arrow is removed.

2014-09-28  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c, ml_edit.h, ml_screen.h:
	  Auto wrap is disabled in putting sixel images to the screen.

2014-09-23  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: CSI>4p is changed to CSI>2p for Xsixel.

	* main_loop.c, x_font.h, win32/x_font.c, xlib/x_font.c:
	  - x_font_use_point_size_for_fc() is renamed to x_font_use_point_size().
	  - "use_point_size" option works on win32.

	* MLTermPty.c: Compiling error is fixed.

2014-09-22  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.fb, doc/en/README.fb: Updated.

	* Makefile.in: Minor fix for install-fb target.

	* x_virtual_kbd.c, fb/x_display.c: Software keyboard area is correctly redrawn.

2014-09-22  Araki Ken  <arakiken@users.sf.net>

	* ml_term.c: Opening pty asynchronously is disabled in opening a new pty
	  channel on an exsiting session.

	* x_virtual_kbd.[ch], fb/x_display.c: Software keyboard is redrawn when
	  it is partially exposed.

	* fb/x_imagelib.c: Transparent pixels are replaced by the current background
	  color on 1bpp.

2014-09-21  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/x_display.c, fb/x_virtual_kbd.c: Software keyboard is available on