@@ -1,3 +1,7 @@
+2014-10-11  Araki Ken  <arakiken@users.sf.net>
+
+	* x_screen.c, x_picture.c: INLINEPIC_AVAIL_ROW is added.
+
 2014-10-07  Araki Ken  <arakiken@users.sf.net>
 
 	* x_screen.c, x_picture.c: The previous fix is moved from x_picture.c
